--- a/css/base.css
+++ b/css/base.css
@@ -426,7 +426,7 @@ i {
   background-color: rgba(57,54,54,0.5);
   backdrop-filter: blur(10px);
   border-radius: 0.625rem;
-  z-index: 2500;
+  z-index: 9000;
 
   display: flex;
   align-items: center;
@@ -444,11 +444,13 @@ i {
 	transition: opacity 0.3s ease, transform 0.3s ease;
 	text-align: center;
 	color: var(--color-text);
+	z-index: 9000;
 }
 
 .project-menu-list__item .menu-text {
   opacity: 0;
   pointer-events: none;
+  z-index: 9000; 
 }
 
 .project-menu-list__item.active {
@@ -475,6 +477,13 @@ i {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  cursor: pointer; /* Add cursor pointer */
+  transition: color 0.3s ease; /* Add transition for hover effect */
+  z-index: 9000;
+}
+
+.project-center:hover {
+  color: var(--color-link-hover); /* Change color on hover */
 }
 
 .menu-icon {
@@ -488,6 +497,84 @@ i {
 
 .menu-icon:hover {
   transform: scale(1.1);
+}
+
+/* ==========================================================================
+		About Me Page
+   ========================================================================== */
+
+#aboutMeContainer {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color:gray;
+	z-index: 9001;
+	display: none;
+	color: #1D1E22;
+}
+
+#aboutMeContainer.active {
+	display: block;
+}
+
+.about-header {
+	padding: var(--page-padding);
+	display: grid;
+	grid-template-columns: auto 1fr auto;
+	grid-template-areas: "title . home";
+	align-items: center;
+	text-transform: uppercase;
+	font-size: 11px;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	z-index: 10;
+}
+
+.about-title {
+	grid-area: title;
+	font-size: 1.25rem;
+	font-weight: 900;
+	letter-spacing: -0.0625rem;
+	margin: 0;
+	color: #1D1E22;
+}
+
+.about-home-btn {
+	grid-area: home;
+	color: #1D1E22;
+	font-size: 0.9rem;
+	font-weight: 500;
+	text-decoration: none;
+	transition: opacity 0.3s ease;
+	justify-self: end;
+	margin-bottom: 10px;
+	margin-right: 45px;
+}
+
+.about-home-btn:hover {
+	opacity: 0.7;
+}
+
+.about-content {
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+	height: 100vh;
+	width: 40%;
+	padding-left: var(--page-padding);
+	background-color:antiquewhite;
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+.about-text {
+	font-size: 2rem;
+	font-weight: 700;
 }
 
 /* ==========================================================================
